Added Gamio app source code

--- a/backend/.env
+++ b/backend/.env
@@ -12,3 +12,4 @@ REACT_APP_PAYPAL_CLIENT_ID=AT4ayI0wtGfTIp0aV0QB39d6JS6yTMCijG3Mqx_b770HVeV2A3ZxN
 # OTP
 OTP_EXPIRES_MINUTES=10
 RESEND_OTP_COOLDOWN_SECONDS=60
+FRONTEND_URL=https://gamio-app.vercel.app/
